--- a/views/head.ejs
+++ b/views/head.ejs
@@ -9,8 +9,9 @@
 		<meta charset="UTF-8">
 		<title><%= siteConfig.title %> - Pokemon Go Trainer Code Share</title>
 
+		
+		<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
-		<link rel="stylesheet" href="/css/linearicons.css">
 		<link rel="stylesheet" href="/css/owl.carousel.css">
 		<link rel="stylesheet" href="/css/font-awesome.min.css">
 		<link rel="stylesheet" href="/css/nice-select.css">
