--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <% include ./head %>
 
 <script type="text/template" id="tpl_countryList">
@@ -63,7 +62,7 @@
 
 <section class="continent section-gap-sm">
 	<div class="container">
-		<div id="card-wrapper" class="code-view justify-content-center mb-30">
+		<div id="card-wrapper" class="code-view row d-flex justify-content-center session-title">
 			<div class="col-md-8 header-text">
 				<div class="lnr-hover"><span class="lnr lnr-users"></span></div>
 				<h2>Find global friends</h2>
