--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 				</div>
 				<div class="banner-content col-lg-12 col-md-12">
 					<h1>
-						Collect Alola Pokemon
+						Collect Alola Pokémons
 						<br>from all over the world.
 					</h1>
 					<a href="/code/register" class="head-btn btn text-uppercase">Share your code</a>
