--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1422,7 +1422,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 9;
+  z-index: 99;
   background-color: #fff;
   padding: 20px 0;
   width: 100% !important;
@@ -1433,7 +1433,7 @@ body {
   top: 0px;
   position: fixed;
   width: 100%;
-  z-index: 9999; }
+  z-index: 999; }
 
 .header-decoration div {
   height: 5px;
@@ -1464,7 +1464,8 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   color: #222222;
-  font-size: 16px; }
+  font-size: 16px;
+  text-transform: uppercase; }
 
 nav {
   margin-right: 70px;
@@ -1482,7 +1483,7 @@ nav {
       width: 110px;
       text-align: right;
       padding: 20px 0;
-      z-index: 5;
+      z-index: 95;
       background: #fff; }
       nav a {
         color: #f7427f !important; }
@@ -1761,7 +1762,7 @@ a, a:hover {
     .continent .country-list .country {
       margin: 3px 5px;
       color: #555;
-      font-size: .7em;
+      font-size: .9em;
       letter-spacing: 0; }
       .continent .country-list .country a {
         color: #555; }
@@ -1776,6 +1777,13 @@ a, a:hover {
 .register {
   padding-right: 10px;
   padding-left: 10px; }
+  .register .feedback {
+    color: #f7427f;
+    margin-top: 3px;
+    margin-left: 10px;
+    letter-spacing: 0;
+    font-weight: 300;
+    display: none; }
   .register h2 {
     padding-bottom: 10px; }
   .register .header-text {
@@ -1822,7 +1830,8 @@ a, a:hover {
 
 .code-view {
   padding-right: 10px;
-  padding-left: 10px; }
+  padding-left: 10px;
+  padding-bottom: 20px; }
   .code-view h2 {
     padding-bottom: 10px; }
   .code-view .header-text {
