--- a/public/scss/theme/_home.scss
+++ b/public/scss/theme/_home.scss
@@ -309,7 +309,7 @@ a, a:hover {
 	.country {
 	  margin: 3px 5px;
 	  color: #555;
-	  font-size: .7em;
+	  font-size: .9em;
 	  letter-spacing: 0;
 	  	a {
 		  color: #555;
@@ -333,6 +333,15 @@ a, a:hover {
 .register {
   padding-right: 10px;
   padding-left: 10px;
+
+  .feedback{
+	color: $primary-color;
+	margin-top: 3px;
+	margin-left: 10px;
+	letter-spacing: 0;
+	font-weight: 300;
+	display: none;
+  }
 
   h2 {
 	padding-bottom: 10px;
@@ -394,6 +403,7 @@ a, a:hover {
 .code-view {
   padding-right: 10px;
   padding-left: 10px;
+  padding-bottom: 20px;
 
   h2 {
 	padding-bottom: 10px;
