--- a/views/foot.ejs
+++ b/views/foot.ejs
@@ -9,15 +9,16 @@
 </footer>
 
 
-<script src="/javascripts/jquery-2.2.4.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="/javascripts/bootstrap.min.js"></script>
+<!--<script src="/javascripts/bootstrap.min.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
 <script src="/javascripts/owl.carousel.min.js"></script>
-<script src="/javascripts/jquery.nice-select.min.js"></script>
-<script src="/javascripts/jquery.ajaxchimp.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxchimp/1.3.0/jquery.ajaxchimp.min.js"></script>
 <script src="/javascripts/jquery.sticky.js"></script>
-<script src="/javascripts/parallax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
 <script src="/javascripts/jquery.easy-autocomplete.min.js"></script>
@@ -35,7 +36,6 @@
 		loggedEl.tooltip({
 			placement: 'bottom'
 		});
-
 		loggedEl.click(function(e) {
 			setTooltip(loggedEl, loggedEl.data('info'));
 			hideTooltip(loggedEl);
