--- a/views/head.ejs
+++ b/views/head.ejs
@@ -41,7 +41,7 @@
 			<div class="header-wrap">
 				<div class="header-top d-flex justify-content-between align-items-center">
 					<div class="logo">
-						<a href="/home"><img class="logo-ball" src="/img/ball.png"><span><%= siteConfig.upperTitle %> </span></a>
+						<a href="/home"><img class="logo-ball" src="/img/ball.png"><span><%= siteConfig.title %> </span></a>
 					</div>
 					<div class="main-menubar d-flex align-items-center">
 						<nav class="hide">
