--- a/views/myView.ejs
+++ b/views/myView.ejs
@@ -60,7 +60,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="row pb-20"></div>
+			<div class="row justify-content-center pt-20">
+				<a href="/code/search"><button class="primary-btn text-uppercase">Look up other trainers<span class="lnr lnr-arrow-right"></span></button></a>
+			</div>
 			<% }); %>
 		<% } %>
 	</div>
