--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
 						<div class="lnr-hover"><span class="lnr lnr-pencil"></span></div>
 						<h2>Share Your Code</h2>
 						<p>
-							Share your trainer code<br>
+							Register your trainer code<br>
 							so other trainers can register you as a friend.
 						</p>
 					</div>
@@ -34,7 +34,7 @@
 						<div class="feedback feedback-trainer_code"></div>
 					</div>
 					<div class="col-lg-12 d-flex justify-content-center">
-						<button class="primary-btn mt-50 text-uppercase">OKAY<span class="lnr lnr-arrow-right"></span></button>
+						<button class="primary-btn mt-30 text-uppercase">OKAY<span class="lnr lnr-arrow-right"></span></button>
 					</div>
 				</div>
 				</form>
