--- a/public/scss/theme/_reset.scss
+++ b/public/scss/theme/_reset.scss
@@ -37,7 +37,7 @@ body {
     font-family: $primary-font;
     font-size: 14px;
     font-weight: 300;
-    line-height: 1.625em;
+    //line-height: 1.625em;
     position: relative;
     // -webkit-font-smoothing: antialiased;
     // -moz-osx-font-smoothing: grayscale;
