--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1837,6 +1837,7 @@ a, a:hover {
     text-align: center; }
   .code-view .card {
     margin: auto;
+    margin-bottom: 20px;
     border-radius: 5px;
     border: 3px solid #fbcdd2;
     padding: 20px;
@@ -1876,6 +1877,13 @@ a, a:hover {
       padding-right: 20px; }
     .code-view .card .line {
       border: 1px dotted #fbcdd2;
+      height: 1px;
+      width: 100%;
+      margin: 10px 0; }
+    .code-view .card .comment {
+      color: #555555; }
+    .code-view .card .line2 {
+      border: 1px dotted #ededed;
       height: 1px;
       width: 100%;
       margin: 10px 0; }
