Fix wrong copyright in footer

--- a/views/foot.ejs
+++ b/views/foot.ejs
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
 			<p class="footer-text">
-				Copyright ©2018 <b><a href=#><%= siteConfig.upperTitle %> </a></b> All rights reserved.
+				Copyright ©2018 <b><a href=#><%= siteConfig.title %> </a></b> All rights reserved.
 			</p>
 		</div>
 	</div>
