--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1825,7 +1825,8 @@ a, a:hover {
 
 .footer-text {
   padding-top: 10px;
-  font-size: 6pt; }
+  font-size: 6pt;
+  text-transform: uppercase; }
 
 .code-view {
   padding-right: 10px;
